Text-align fixed

--- a/Styles.css
+++ b/Styles.css
@@ -1,4 +1,4 @@
 body{background-color:gray}
-h1 {color: blue;text:center; border: 2px solid green}
+h1 {color: blue; text-align:center; border: 2px solid green}
 p{color: red; border: 1px solid black }
 li{color: yellow}
